--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
-attrs==19.3.0
-beautifulsoup4==4.9.0
-bs4==0.0.1
-certifi==2020.4.5.1
-chardet==3.0.4
+
+beautifulsoup4
+bs4
 discord.py
-idna==2.9
-multidict==4.7.6
-RandomWords==0.2.1
-requests==2.23.0
-soupsieve==2.0
-urllib3==1.25.9
-websockets==8.1
-yarl==1.4.2
+RandomWords
+requests
+
